--- a/_posts/2024-09-21-GEBRA-week0.md
+++ b/_posts/2024-09-21-GEBRA-week0.md
@@ -4,7 +4,7 @@ title: "GEBRA: Week 0, Why do this?"
 date: 2024-09-21
 tags: GEBRA
 categories: GEBRA
-published: false
+published: true
 author: Yongjun Song
 ---
 
@@ -14,86 +14,96 @@ This post is 270 days behind the actual project.
 
 Before we dive in:
 
-3billion is a rare disease diagnostics founded on 2016.
-It has been using this platform, GEBRA, since 2021. GEBRA is named after its purpose, **G**enetic **E**vidence **BR**owsing and **A**nalysis. It is a combination of analytic pipeline, annotation software, visualization tools, information aggregate, and reporting system. 
+3billion is a rare disease diagnostics company founded on 2016. Since 2021, we have been using a platform called GEBRA, named after its purpose: **G** enetic **E** vidence **BR** owsing and **A** nalysis. It combines an analytic pipeline, annotation software, visualization tools, information aggregation, and a reporting system.
 
-Through several experiences of powering this service to external users for funded projects, the company decided to open up the service.
+Through several experiences of providing this service to external users in funded projects, the company decided to open up the service.
 
-For the first month of the project. I tried to set up the reason and the goal of the project.
+For the first month of the project, we focused on establishing the reason and the goal of the project.
 
 In this post, I will discuss 
-1. Why I needed the reason for the project and 
-2. What the reason was.
+1. Why we needed the reason for the project
+2. What the reason was
 
-*-on the next post, I will write about the **goal***
+*-In the next post, I will write about the **goal**.*
+
+--------------------
 
 ## Reason
 
-Having reasons (a drive, back-up data, a feasibility test, or whatever you want to call it) and get them delivered to the team is the essential part of project setting. Clear and unquestionable reasons bring resilience to the team. A year is not short. A lot of things happen along the journey. The team can get into a trouble, an argue, a fight and get exhausted, even pessimistic. Having strong reasons will help your team overcome those issues.
+Having clear reasons (a drive, backup data, a feasibility test, or whatever you want to call it) and communicating them to the team is an essential part of project planning. Clear and unquestionable reasons bring resilience to the team. A year is not short; a lot can happen along the journey. The team might encounter trouble, disagreements, exhaustion, or even pessimism. Having strong reasons will help our team overcome these challenges.
 
-### For our vision:
+### For Our Vision:
 
-We believe we could provide more 1. **accurate** 2. **fast** and 3. **affordable** genomic diagnosis service for rare disease patients to end their diagnostic odyssey. They are spending **6 years on average** only to get diagnosed. It is our vision to help those who are suffering.
+We provide more  **fast**, **accurate**, and **affordable** genomic diagnostic service for rare disease patients to end their diagnostic odyssey. They are spending **6 years on average** only to get diagnosed. It is our vision to help those who are suffering. 
 
-### On business persective:
+We strongly believe that we can help patients in need through GEBRA.
 
-On business perspective, GEBRA project is for business diversification of the company.
+### From a business perspective:
 
-There are four reasons for the diversification
+The GEBRA project aims to diversify the company's offerings. There are four reasons for this diversification:
 
 1. Growth.
 
-Though 3billion is a fast-growing company(my hands are down for this, its revenue has increased three times over a year and continue increasing), launching a new service is one good method to create revenue.
+Although 3billion is a fast-growing company(I must acknowledge this, its revenue has increased three times over a year and continues to rise), launching a new service is an excellent method to generate additional revenue.
 
-3billion's main services are genomic tests, exome and genome, for rare disease patients. The company receives clinical samples(e.g. blood) from the patient, and analyze data generated from a sequence of experiments. Then through analysis and interpretation we provide valuable insight to doctors for their patients' conditions. 
-*- For those who are not familiar with exome, this is a link to wikipedia [(wikipedia: exome)](https://en.wikipedia.org/wiki/Exome)*
+3billion's main services are genomic tests—exome and genome sequencing—for rare disease patients. The company receives clinical samples (e.g., blood) from patients and analyzes data generated from a sequence of experiments. Then, through analysis and interpretation, we provide valuable insights to doctors regarding their patients' conditions. 
 
-The point is that we are not the only company providing such services and there are institutions doing these tests on their own. Through experiences, we proved our theory that such institutions(including hospitals and research centers) require streamlined pipeline for productivity and analysis software for accuracy. GEBRA perfectly matches such needs, therefore we were sure that we can extend our service to the institutions through GEBRA.
+*- For those who are not familiar with exome sequencing, here is a link to [(wikipedia: exome)](https://en.wikipedia.org/wiki/Exome)*
+
+The point is, we are not the only company providing such services, and some institutions conduct these tests independently. Through experience, we have proven that such institutions (including hospitals and research centers) require streamlined pipelines for productivity and analysis software for accuracy. GEBRA perfectly matches these needs; therefore, we are confident that we can extend our service to these institutions through GEBRA.
 
 2. Diversification
 
-Sending out clinical samples across the boarder will likely to be prohibited in the future.
+Sending out clinical samples across borders will likely be prohibited in the future. As 3billion is an international service provider, this trend is not good news for us[(Perplexity: 'Genetic Testing Regulation: Overview')](https://www.perplexity.ai/page/genetic-testing-regulation-ove-Pn2xwYA9TyymvwOrbPQbYQ).
 
-As 3billion is an international service provider, this trend is not a good news for us [(Perplexity: 'Genetic Testing Regulation: Overview')](https://www.perplexity.ai/page/genetic-testing-regulation-ove-Pn2xwYA9TyymvwOrbPQbYQ)
-
-GEBRA is a good measure to spread such risk. The software complies with such regulation (e.g. GDPR of UE) and users will have complete control over their own and their patients' personal data including genomic data. This will be our ark for the future where no clinical samples or genomic data are allowed to across the boarder or to be handled by third party.
+GEBRA effectively mitigates this risk. The software complies with regulations (e.g., GDPR of the EU), and users will have complete control over their own and their patients' personal data, including genomic data. This platform will safeguard our operations in a future where transferring clinical samples or genomic data across borders or to third parties is restricted.
 
 3. Economies of scope.
 
-3billion has been using this platform internally for 4 years. Even though the platform required a bit of trimming as it was rooted on internal features, the cost required was tedious enough for us to make a decision to open the platform. 
+3billion has been using this platform internally for four years. Even though the platform required a bit of refinement—as it was rooted in internal features—the cost was reasonable enough for us to decide to open the platform.
 
-Think of 'Slack'. Unlike it's enormous success of today, the messenger started as an internal service of a game startup. When the game failed, the startup decided to sell the messenger because, why not? It's already there.
+Think of Slack. Unlike its enormous success today, the messenger started as an internal service of a game startup. When the game failed, the startup decided to sell the messenger because, why not? It was already there.
 
 4. Market Entrance.
 
-3billion is always looking for chances to extend our businesses.
+3billion is always looking for opportunities to expand our business.
 
-For market entrance, a software is unbelievably handy tool to leverage compared to genomic test we have been providing. 
+For market entrance, software is an unbelievably handy tool compared to the genomic tests we have been providing.
+ 
 
 |  | Genomic test | GEBRA |
 |-------|--------|---------|
-| Delivery | Fedex, takes days | data upload, takes hours |
+| Delivery | Fedex, takes days | Upload to AWS, takes hours |
 | Cost | Human resources, Consumables, etc | Data processing fees |
 | Product | Reports | Experiences whole process from A to Z |
 
 Upload a data from your local, experience, and use it if you like it.
 
-GEBRA is a complete tool by itself and at the same time it could be a great marketing tool.
+GEBRA is a complete tool by itself, and at the same time it could be a great marketing tool.
 
 Interestingly, as our project went on two large genomic analysis/interpretation service providers, SOPHIA genetics and CENTOGENE, withdrew their services from Europe and African regions.
  -SOPHIA genetics is retrieving because of pricing pressure. Please refer to [(SOPHiA GENETICS 2Q Corporate disclosure](https://www.sophiagenetics.com/press-releases/sophia-genetics-reports-second-quarter-2024-results/), [SIPHiA GENETICS 2Q Earnings call transcript)](https://seekingalpha.com/article/4711056-sophia-genetics-sa-soph-q2-2024-earnings-call-transcript)
- -CENTOGENE has been delisted from NASDAQ recently and likely to shrink or close down their business. Please refer to [(CENTOGENE: Inverstor Relations)](https://investors.centogene.com/)
+ -CENTOGENE has been delisted from NASDAQ recently and likely to shrink or close down their business. Please refer to [(CENTOGENE: Investor Relations)](https://investors.centogene.com/)
 
- This would be a great chance for 3billion.
+ This is a great opportunity for 3billion.
+
+--------------------
 
 ## Conclusion
 
-Before the beginning of the project, we cleared reasons for doing this project to bring resilience and drive to the team.
+Before the beginning of the project, we clarified the reasons for undertaking this initiative to bring resilience and drive to the team.
 
-The reason that it aligns with our vision. Helping rare disease patients. To provide more fast, accurate and affordable genomic tests for rare disease patients, GEBRA project was essential.
+The reason is that it aligns with our vision: helping rare disease patients. To provide faster, more accurate, and more affordable genomic tests for rare disease patients, the GEBRA project was essential.
 
-On business perspective, it's for the 1. Growth 2. Diversification 3. Economies of scope 4. Market Entrance.
+From a business perspective, it's for:
 
-On the next post, I will write how we set the goal.
+1. Growth
+2. Diversification
+3. Economies of Scope
+4. Market Entrance
 
-Contact me on emails if you have anything to tell me.
+In the next post, I will write about how we set the goal.
+
+Feel free to contact me by email if you have any questions or feedback.
+
+*Thank you for reading. Stay tuned for our next update!*
