GEBRA week 0 revised

--- a/_posts/2024-09-21-GEBRA-week0.md
+++ b/_posts/2024-09-21-GEBRA-week0.md
@@ -77,8 +77,10 @@ Upload a data from your local, experience, and use it if you like it.
 GEBRA is a complete tool by itself, and at the same time it could be a great marketing tool.
 
 Interestingly, as our project went on two large genomic analysis/interpretation service providers, SOPHIA genetics and CENTOGENE, withdrew their services from Europe and African regions.
- -SOPHIA genetics is retrieving because of pricing pressure. Please refer to [(SOPHiA GENETICS 2Q Corporate disclosure](https://www.sophiagenetics.com/press-releases/sophia-genetics-reports-second-quarter-2024-results/), [SIPHiA GENETICS 2Q Earnings call transcript)](https://seekingalpha.com/article/4711056-sophia-genetics-sa-soph-q2-2024-earnings-call-transcript)
- -CENTOGENE has been delisted from NASDAQ recently and likely to shrink or close down their business. Please refer to [(CENTOGENE: Investor Relations)](https://investors.centogene.com/)
+
+SOPHIA genetics is retrieving because of pricing pressure. Please refer to [(SOPHiA GENETICS 2Q Corporate disclosure](https://www.sophiagenetics.com/press-releases/sophia-genetics-reports-second-quarter-2024-results/), [SIPHiA GENETICS 2Q Earnings call transcript)](https://seekingalpha.com/article/4711056-sophia-genetics-sa-soph-q2-2024-earnings-call-transcript)
+
+CENTOGENE has been delisted from NASDAQ recently and likely to shrink or close down their business. Please refer to [(CENTOGENE: Investor Relations)](https://investors.centogene.com/)
 
  This is a great opportunity for 3billion.
 
