--- a/_posts/2024-09-21-GEBRA-week0.md
+++ b/_posts/2024-09-21-GEBRA-week0.md
@@ -10,13 +10,15 @@ author: Yongjun Song
 This post is 270 days behind the actual project.
 
 Before we dive in:
-3billion is a rare disease diagnostics company founded on 2016. Since 2021, we have been using a platform called GEBRA, named after its purpose: **G**enetic **E**vidence **BR**owsing and **A**nalysis. It combines an analytic pipeline, annotation software, visualization tools, information aggregation, and a reporting system.
+3billion is a rare disease diagnostics company founded on 2016. 
+Since 2021, we have been using a platform called GEBRA, named after its purpose: **G**enetic **E**vidence **BR**owsing and **A**nalysis. It combines an analytic pipeline, annotation software, visualization tools, information aggregation, and a reporting system.
 Through several experiences of providing this service to external users in funded projects, the company decided to open up the service.
 For the first month of the project, we focused on establishing the reason and the goal of the project.
 
 In this post, I will discuss 
 1. Why we needed the reason for the project
 2. What the reason was
+
 *-In the next post, I will write about the **goal**.*
 
 ## Reason
@@ -30,20 +32,24 @@ We strongly believe that we can help patients in need through GEBRA.
 The GEBRA project aims to diversify the company's offerings. There are four reasons for this diversification:
 
 1. **Growth**
+
 Although 3billion is a fast-growing company(I must acknowledge this, its revenue has increased three times over a year and continues to rise), launching a new service is an excellent method to generate additional revenue.
 3billion's main services are genomic tests—exome and genome sequencing—for rare disease patients. The company receives clinical samples (e.g., blood) from patients and analyzes data generated from a sequence of experiments. Then, through analysis and interpretation, we provide valuable insights to doctors regarding their patients' conditions. 
 *- For those who are not familiar with exome sequencing, here is a link to [(wikipedia: exome)](https://en.wikipedia.org/wiki/Exome)*
 The point is, we are not the only company providing such services, and some institutions conduct these tests independently. Through experience, we have proven that such institutions (including hospitals and research centers) require streamlined pipelines for productivity and analysis software for accuracy. GEBRA perfectly matches these needs; therefore, we are confident that we can extend our service to these institutions through GEBRA.
 
 2. **Diversification**
+
 Sending out clinical samples across borders will likely be prohibited in the future. As 3billion is an international service provider, this trend is not good news for us[(Perplexity: 'Genetic Testing Regulation: Overview')](https://www.perplexity.ai/page/genetic-testing-regulation-ove-Pn2xwYA9TyymvwOrbPQbYQ).
 GEBRA effectively mitigates this risk. The software complies with regulations (e.g., GDPR of the EU), and users will have complete control over their own and their patients' personal data, including genomic data. This platform will safeguard our operations in a future where transferring clinical samples or genomic data across borders or to third parties is restricted.
 
 3. **Economies of scope**
+
 3billion has been using this platform internally for four years. Even though the platform required a bit of refinement—as it was rooted in internal features—the cost was reasonable enough for us to decide to open the platform.
 Think of Slack. Unlike its enormous success today, the messenger started as an internal service of a game startup. When the game failed, the startup decided to sell the messenger because, why not? It was already there.
 
 4. **Market Entrance**
+
 3billion is always looking for opportunities to expand our business.
 For market entrance, software is an unbelievably handy tool compared to the genomic tests we have been providing.
 
