--- a/_posts/2024-09-21-GEBRA-week0.md
+++ b/_posts/2024-09-21-GEBRA-week0.md
@@ -11,14 +11,14 @@ This post is 270 days behind the actual project.
 
 Before we dive in:
 
-3billion is a rare disease diagnostics company founded on 2016.\n
-Since 2021, we have been using a platform called GEBRA, named after its purpose: **G**enetic **E**vidence **BR**owsing and **A**nalysis. It combines an analytic pipeline, annotation software, visualization tools, information aggregation, and a reporting system.\n
-Through several experiences of providing this service to external users in funded projects, the company decided to open up the service.\n
+3billion is a rare disease diagnostics company founded on 2016.   
+Since 2021, we have been using a platform called GEBRA, named after its purpose: **G**enetic **E**vidence **BR**owsing and **A**nalysis. It combines an analytic pipeline, annotation software, visualization tools, information aggregation, and a reporting system.   
+Through several experiences of providing this service to external users in funded projects, the company decided to open up the service.   
 For the first month of the project, we focused on establishing the reason and the goal of the project.
 
-In this post, I will discuss 
+In this post, I will discuss: 
 1. Why we needed the reason for the project
-2. What the reason was\n
+2. What the reason was   
 *-In the next post, I will write about the **goal**.*
 
 ## Reason
@@ -28,24 +28,23 @@ Having clear reasons (a drive, backup data, a feasibility test, or whatever you 
 We provide more  **fast**, **accurate**, and **affordable** genomic diagnostic service for rare disease patients to end their diagnostic odyssey. They are spending **6 years on average** only to get diagnosed. It is our vision to help those who are suffering. 
 We strongly believe that we can help patients in need through GEBRA.
 
-### From a business perspective:
+### From a Business Perspective:
 The GEBRA project aims to diversify the company's offerings. There are four reasons for this diversification:
 
-1. **Growth**\n
-Although 3billion is a fast-growing company(I must acknowledge this, its revenue has increased three times over a year and continues to rise), launching a new service is an excellent method to generate additional revenue.
-3billion's main services are genomic tests—exome and genome sequencing—for rare disease patients. The company receives clinical samples (e.g., blood) from patients and analyzes data generated from a sequence of experiments. Then, through analysis and interpretation, we provide valuable insights to doctors regarding their patients' conditions. 
-*- For those who are not familiar with exome sequencing, here is a link to [(wikipedia: exome)](https://en.wikipedia.org/wiki/Exome)*
+1. **Growth**   
+Although 3billion is a fast-growing company (I must acknowledge this, its revenue has increased three times over a year and continues to rise), launching a new service is an excellent method to generate additional revenue.
+3billion's main services are genomic tests—[exome](https://en.wikipedia.org/wiki/Exome) and genome sequencing—for rare disease patients. The company receives clinical samples (e.g., blood) from patients and analyzes data generated from a sequence of experiments. Then, through analysis and interpretation, we provide valuable insights to doctors regarding their patients' conditions.   
 The point is, we are not the only company providing such services, and some institutions conduct these tests independently. Through experience, we have proven that such institutions (including hospitals and research centers) require streamlined pipelines for productivity and analysis software for accuracy. GEBRA perfectly matches these needs; therefore, we are confident that we can extend our service to these institutions through GEBRA.
 
-2. **Diversification**\n
-Sending out clinical samples across borders will likely be prohibited in the future. As 3billion is an international service provider, this trend is not good news for us[(Perplexity: 'Genetic Testing Regulation: Overview')](https://www.perplexity.ai/page/genetic-testing-regulation-ove-Pn2xwYA9TyymvwOrbPQbYQ).
+2. **Diversification**   
+Sending out clinical samples across borders will likely be prohibited in the future. As 3billion is an international service provider, [this trend is not good news for us](https://www.perplexity.ai/page/genetic-testing-regulation-ove-Pn2xwYA9TyymvwOrbPQbYQ).
 GEBRA effectively mitigates this risk. The software complies with regulations (e.g., GDPR of the EU), and users will have complete control over their own and their patients' personal data, including genomic data. This platform will safeguard our operations in a future where transferring clinical samples or genomic data across borders or to third parties is restricted.
 
-3. **Economies of scope**\n
+3. **Economies of scope**   
 3billion has been using this platform internally for four years. Even though the platform required a bit of refinement—as it was rooted in internal features—the cost was reasonable enough for us to decide to open the platform.
 Think of Slack. Unlike its enormous success today, the messenger started as an internal service of a game startup. When the game failed, the startup decided to sell the messenger because, why not? It was already there.
 
-4. **Market Entrance**\n
+4. **Market Entrance**   
 3billion is always looking for opportunities to expand our business.
 For market entrance, software is an unbelievably handy tool compared to the genomic tests we have been providing.
 
@@ -58,9 +57,9 @@ For market entrance, software is an unbelievably handy tool compared to the geno
 Upload a data from your local, experience, and use it if you like it.
 GEBRA is a complete tool by itself, and at the same time it could be a great marketing tool.
 ---
-Interestingly, as our project went on two large genomic analysis/interpretation service providers, SOPHIA genetics and CENTOGENE, withdrew their services from Europe and African regions.
-SOPHIA genetics is retrieving because of pricing pressure. Please refer to [(SOPHiA GENETICS 2Q Corporate disclosure](https://www.sophiagenetics.com/press-releases/sophia-genetics-reports-second-quarter-2024-results/), [SOPHiA GENETICS 2Q Earnings call transcript)](https://seekingalpha.com/article/4711056-sophia-genetics-sa-soph-q2-2024-earnings-call-transcript)
-CENTOGENE has been delisted from NASDAQ recently and likely to shrink or close down their business. Please refer to [(CENTOGENE: Investor Relations)](https://investors.centogene.com/)
+Interestingly, as our project went on two large genomic analysis/interpretation service providers, SOPHiA Genetics and CENTOGENE, withdrew their services from Europe and African regions.
+[According to SOPHiA Genetics Q2 report](https://www.sophiagenetics.com/press-releases/sophia-genetics-reports-second-quarter-2024-results/), [SOPHiA Genetics is retrieving because of pricing pressure](https://seekingalpha.com/article/4711056-sophia-genetics-sa-soph-q2-2024-earnings-call-transcript).
+[CENTOGENE has been delisted from NASDAQ recently and likely to shrink or close down their business](https://investors.centogene.com/).
  This is a great opportunity for 3billion.
 
 ## Conclusion
