--- a/_posts/2024-09-21-GEBRA-week0.md
+++ b/_posts/2024-09-21-GEBRA-week0.md
@@ -19,7 +19,6 @@ For the first month of the project, we focused on establishing the reason and th
 In this post, I will discuss: 
 1. Why we needed the reason for the project
 2. What the reason was   
-*-In the next post, I will write about the **goal**.*
 
 ## Reason
 Having clear reasons (a drive, backup data, a feasibility test, or whatever you want to call it) and communicating them to the team is an essential part of project planning. Clear and unquestionable reasons bring resilience to the team. A year is not short; a lot can happen along the journey. The team might encounter trouble, disagreements, exhaustion, or even pessimism. Having strong reasons will help our team overcome these challenges.
@@ -58,8 +57,8 @@ Upload a data from your local, experience, and use it if you like it.
 GEBRA is a complete tool by itself, and at the same time it could be a great marketing tool.
 ---
 Interestingly, as our project went on two large genomic analysis/interpretation service providers, SOPHiA Genetics and CENTOGENE, withdrew their services from Europe and African regions.
-According to [SOPHiA Genetics Q2 report](https://www.sophiagenetics.com/press-releases/sophia-genetics-reports-second-quarter-2024-results/), [SOPHiA Genetics is retreating because of pricing pressure](https://seekingalpha.com/article/4711056-sophia-genetics-sa-soph-q2-2024-earnings-call-transcript).
-[CENTOGENE has been delisted from NASDAQ recently and likely to shrink or close down their business](https://investors.centogene.com/).
+According to [SOPHiA Genetics Q2 report](https://www.sophiagenetics.com/press-releases/sophia-genetics-reports-second-quarter-2024-results/), SOPHiA Genetics is [retreating because of pricing pressure](https://seekingalpha.com/article/4711056-sophia-genetics-sa-soph-q2-2024-earnings-call-transcript).
+[CENTOGENE has been delisted from NASDAQ](https://investors.centogene.com/) recently and likely to shrink or close down their business.
  This is a great opportunity for 3billion.
 
 ## Conclusion
@@ -72,7 +71,8 @@ From a business perspective, it's for:
 3. Economies of Scope
 4. Market Entrance
 
-In the next post, I will write about how we set the goal.
+In the next post, I will write how we established the **goal**.
+
 Feel free to contact me by email if you have any questions or feedback.
 
 *Thank you for reading. Stay tuned for our next update!*
