GEBRA week 0 revised

--- a/_posts/2024-09-21-GEBRA-week0.md
+++ b/_posts/2024-09-21-GEBRA-week0.md
@@ -36,7 +36,7 @@ Although 3billion is a fast-growing company (I must acknowledge this, its revenu
 The point is, we are not the only company providing such services, and some institutions conduct these tests independently. Through experience, we have proven that such institutions (including hospitals and research centers) require streamlined pipelines for productivity and analysis software for accuracy. GEBRA perfectly matches these needs; therefore, we are confident that we can extend our service to these institutions through GEBRA.
 
 2. **Diversification**   
-Sending out clinical samples across borders will likely be prohibited in the future. As 3billion is an international service provider, [growing regulation of genetic testing is not good news for us](https://www.perplexity.ai/page/genetic-testing-regulation-ove-Pn2xwYA9TyymvwOrbPQbYQ).
+Sending out clinical samples across borders will likely be prohibited in the future. As 3billion is an international service provider, [growing regulation of genetic testing](https://www.perplexity.ai/page/genetic-testing-regulation-ove-Pn2xwYA9TyymvwOrbPQbYQ) is not good news for us.
 GEBRA effectively mitigates this risk. The software complies with regulations (e.g., GDPR of the EU), and users will have complete control over their own and their patients' personal data, including genomic data. This platform will safeguard our operations in a future where transferring clinical samples or genomic data across borders or to third parties is restricted.
 
 3. **Economies of scope**   
@@ -57,7 +57,7 @@ Upload a data from your local, experience, and use it if you like it.
 GEBRA is a complete tool by itself, and at the same time it could be a great marketing tool.
 ---
 Interestingly, as our project went on two large genomic analysis/interpretation service providers, SOPHiA Genetics and CENTOGENE, withdrew their services from Europe and African regions.
-According to [SOPHiA Genetics Q2 report](https://www.sophiagenetics.com/press-releases/sophia-genetics-reports-second-quarter-2024-results/), SOPHiA Genetics is [retreating because of pricing pressure](https://seekingalpha.com/article/4711056-sophia-genetics-sa-soph-q2-2024-earnings-call-transcript).
+According to [SOPHiA Genetics Q2 report](https://www.sophiagenetics.com/press-releases/sophia-genetics-reports-second-quarter-2024-results/) and [the 2Q earnings call transcript](https://seekingalpha.com/article/4711056-sophia-genetics-sa-soph-q2-2024-earnings-call-transcript), SOPHiA Genetics is retreating from Europe and MENA region because of pricing pressure.
 [CENTOGENE has been delisted from NASDAQ](https://investors.centogene.com/) recently and likely to shrink or close down their business.
  This is a great opportunity for 3billion.
 
