GEBRA week 0 revised

--- a/_posts/2024-09-21-GEBRA-week0.md
+++ b/_posts/2024-09-21-GEBRA-week0.md
@@ -54,9 +54,9 @@ For market entrance, software is an unbelievably handy tool compared to the geno
 | Product | Reports | Experiences whole process from A to Z |
 
 Upload a data from your local, experience, and use it if you like it.
-GEBRA is a complete tool by itself, and at the same time it could be a great marketing tool.
----
-Interestingly, as our project went on two large genomic analysis/interpretation service providers, SOPHiA Genetics and CENTOGENE, withdrew their services from Europe and African regions.
+GEBRA is a complete tool by itself, and at the same time it could be a great marketing tool.   
+
+-Interestingly, as our project went on two large genomic analysis/interpretation service providers, SOPHiA Genetics and CENTOGENE, withdrew their services from Europe and African regions.
 According to [SOPHiA Genetics Q2 report](https://www.sophiagenetics.com/press-releases/sophia-genetics-reports-second-quarter-2024-results/) and [the 2Q earnings call transcript](https://seekingalpha.com/article/4711056-sophia-genetics-sa-soph-q2-2024-earnings-call-transcript), SOPHiA Genetics is retreating from Europe and MENA region because of pricing pressure.
 [CENTOGENE has been delisted from NASDAQ](https://investors.centogene.com/) recently and likely to shrink or close down their business.
  This is a great opportunity for 3billion.
