GEBRA week 0 revised

--- a/_posts/2024-09-21-GEBRA-week0.md
+++ b/_posts/2024-09-21-GEBRA-week0.md
@@ -49,7 +49,7 @@ For market entrance, software is an unbelievably handy tool compared to the geno
 
 |  | Genomic test | GEBRA |
 |-------|--------|---------|
-| Delivery | Fedex, takes days | Upload to AWS, takes hours |
+| Delivery | FEDEx, takes days | Upload to AWS, takes hours |
 | Cost | Human resources, Consumables, etc | Data processing fees |
 | Product | Reports | Experiences whole process from A to Z |
 
