second post - draft

--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -4,7 +4,7 @@ title: "GEBRA: Week 1, the goal"
 date: 2024-10-01
 tags: GEBRA
 categories: GEBRA
-published: true
+published: false
 author: Yongjun Song
 ---
 
