--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -16,17 +16,17 @@ As a product owner and project manager for the genomic analysis and interpretati
 
 Having a clear goal increases the chances of success:
 
-$$ \text{Probability of success with goals} \geq \text{Probability of success without goals} $$
+$\text{Probability of success with goals} >= text{Probability of success without goals}$
 
-To understand the factors affecting the probability of success, let's consider an equation based on the "fast failure" method. Assume that each project attempt has the same probability of success (\( p \)) and that success is so definitive that you don't need a second one. The number of projects attempted is \( n \).
+To understand the factors affecting the probability of success, let's consider an equation based on the "fast failure" method. Assume that each project attempt has the same probability of success ($\text{p}) and that success is so definitive that you don't need a second one. The number of projects attempted is ($\text{n}$).
 
 The probability of achieving success increases with each project attempt:
 
-$$ \text{Total Success} = \text{Probability of Single Success} + \text{Probability of Success After Failure} $$
+$\text{Total Success} = \text{Probability of Single Success} + \text{Probability of Success After Failure}$
 
 Mathematically, it can be expressed as a sum of probabilities that reduces to:
 
-$$ \text{Total Success} = \frac{p(1 - (1-p)^n)}{1 - (1-p)} $$
+$\text{Total Success} = \frac{p(1 - (1-p)^n)}{1 - (1-p)}$
 
 Here, \( p \) is the probability of success for a single project, and \( n \) is the number of project attempts. Simply put, the more attempts you have, the more likely you are to achieve success.
 
