second post - draft - publish

--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -16,9 +16,9 @@ As a product owner and project manager for the genomic analysis and interpretati
 
 Having a clear goal increases the chances of success:
 
-$\text{Probability of success with goals} >= text{Probability of success without goals}$
+$\text{Probability of success with goals} >= \text{Probability of success without goals}$
 
-To understand the factors affecting the probability of success, let's consider an equation based on the "fast failure" method. Assume that each project attempt has the same probability of success ($\text{p}) and that success is so definitive that you don't need a second one. The number of projects attempted is ($\text{n}$).
+To understand the factors affecting the probability of success, let's consider an equation based on the "fast failure" method. Assume that each project attempt has the same probability of success ($\text{p}$) and that success is so definitive that you don't need a second one. The number of projects attempted is ($\text{n}$).
 
 The probability of achieving success increases with each project attempt:
 
@@ -26,30 +26,30 @@ $\text{Total Success} = \text{Probability of Single Success} + \text{Probability
 
 Mathematically, it can be expressed as a sum of probabilities that reduces to:
 
-$\text{Total Success} = \frac{p(1 - (1-p)^n)}{1 - (1-p)}$
+$\text{Total Success} = \frac{p(1 - (1-p)^n)}{p}$
 
-Here, \( p \) is the probability of success for a single project, and \( n \) is the number of project attempts. Simply put, the more attempts you have, the more likely you are to achieve success.
+Here, $\text{p}$ is the probability of success for a single project, and $\text{n}$ is the number of project attempts. Simply put, the more attempts you have, the more likely you are to achieve success.
 
 The number of attempts $\text{n}$ is influenced by:
 
-$$ n = \frac{\text{Total Budget}}{\text{Cost Per Project}} $$
+$\text{n} = \frac{\text{Total Budget}}{\text{Cost Per Project}}$
 
 Where:
 
-- $$ \text{Cost Per Project} = \text{Project Time} \times \text{Daily Expenditure} $$
+- $\text{Cost Per Project} = \text{Project Time} \times \text{Daily Expenditure}$
 - $\text{Project Time}$ is determined by the amount of work needed to achieve the project's goals.
 
 Assuming each project requires a certain $\text{Total Achievement}$, we have:
 
-$$ \text{Total Achievement} = \text{Project Time} \times \text{Daily Achievement} + \text{Previous Achievement} $$
+$\text{Total Achievement} = \text{Project Time} \times \text{Daily Achievement} + \text{Previous Achievement}$
 
 Where:
 
-$$ \text{Daily Achievement} = \text{Cohesion} \times \text{Individual Ability} - \text{Unnecessary Work} $$
+$\text{Daily Achievement} = \text{Cohesion} \times \text{Individual Ability} - \text{Unnecessary Work}$
 
 Substituting back, the **Cost Per Project** becomes:
 
-$$ \text{Cost Per Project} = \frac{\text{Total Achievement} - \text{Previous Achievement}}{\text{Cohesion} \times \text{Individual Ability} - \text{Unnecessary Work}} \times \text{Daily Expenditure} $$
+$\text{Cost Per Project} = \frac{\text{Total Achievement} - \text{Previous Achievement}}{\text{Cohesion} \times \text{Individual Ability} - \text{Unnecessary Work}} \times \text{Daily Expenditure}$
 
 Therefore, $\text{n}$ increases with:
 
