second post - draft - publish

--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -22,11 +22,15 @@ To understand the factors affecting the probability of success, let's consider a
 
 The probability of achieving success increases with each project attempt:
 
-$\text{Total Success} = \text{Probability of Single Success} + \text{Probability of Success After Failure}$
+$\text{Success} = \text{Probability of Single Success} + \text{Probability of Success After Failure}$
+
+Which is:
+
+$\text{Success} = {p_1} + {p_2} + \cdots + {p_{n-1}} + {p_n} = p + p(1-p) + \cdots + p(1-p)^{n-2} + p(1-p)^{n-1}$
 
 Mathematically, it can be expressed as a sum of probabilities that reduces to:
 
-$\text{Total Success} = \frac{p(1 - (1-p)^n)}{p}$
+$\text{Success} = (1 - (1-p)^n)$
 
 Here, $\text{p}$ is the probability of success for a single project, and $\text{n}$ is the number of project attempts. Simply put, the more attempts you have, the more likely you are to achieve success.
 
@@ -87,7 +91,7 @@ Goals act as benchmarks to measure project success. By defining clear objectives
 
 In short, with clear goals:
 
-${P_{n-1}} < {P_{n}$
+${p_{n-1}} < p_{n}$
 
 
 ## How We Set Clear Goals
