second post - draft - publish

--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -4,7 +4,7 @@ title: "GEBRA: Week 1, the goal"
 date: 2024-10-01
 tags: GEBRA
 categories: GEBRA
-published: true
+published: false
 author: Yongjun Song
 ---
 
@@ -51,7 +51,7 @@ Where:
 
 $\text{Daily Achievement} = \text{Cohesion} \times \text{Individual Ability} - \text{Unnecessary Work}$
 
-Substituting back, the **Cost Per Project** becomes:
+Substituting back, the $\text{Cost Per Project}$ becomes:
 
 $\text{Cost Per Project} = \frac{\text{Total Achievement} - \text{Previous Achievement}}{\text{Cohesion} \times \text{Individual Ability} - \text{Unnecessary Work}} \times \text{Daily Expenditure}$
 
