second post - draft - publish

--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -32,7 +32,17 @@ Mathematically, it can be expressed as a sum of probabilities that reduces to:
 
 $\text{Success} = (1 - (1-p)^n)$
 
-Here, $\text{p}$ is the probability of success for a single project, and $\text{n}$ is the number of project attempts. Simply put, the more attempts you have, the more likely you are to achieve success.
+Here, $\text{p}$ is the probability of success for a single project, and $\text{n}$ is the number of project attempts.
+In this equation, $\text{Success}$ is affected by $\text{n}$ and $\text{p}$, and increases as those two factors increase.
+Simply put, 
+1. the more attempts you have, the more likely you are to achieve success.
+2. the more likely each project succeed, the more likely you are to achieve success.
+
+and **setting goals increases both $\text{n}$ and $\text{p}$**.
+
+## How Clear Goals Enhance Success
+
+### Increasing $\text{n}$
 
 The number of attempts $\text{n}$ is influenced by:
 
@@ -67,9 +77,7 @@ Therefore, $\text{n}$ increases with:
 
 **Setting clear goals directly impacts factors 4 and 6.**
 
-## How Clear Goals Enhance Success
-
-### 1. Strengthening Team Cohesion
+#### 1. Strengthening Team Cohesion
 
 Clear goals enable the team to understand what needs to be achieved, promoting better communication and increasing cohesion. Communication is essential, especially in a multidisciplinary team like GEBRA, which includes medical genetics experts, web developers, BI engineers, and AI engineers. Each team has different domain knowledge and perspectives, making it challenging to align on vague objectives. Defining specific goals—such as creating a product that provides:
 
@@ -79,13 +87,13 @@ Clear goals enable the team to understand what needs to be achieved, promoting b
 
 helped unifying the team's efforts.
 
-### 2. Reducing Unnecessary Work
+#### 2. Reducing Unnecessary Work
 
 Clear goals guide the project direction, preventing team members from pursuing well-intentioned but potentially unnecessary features. While adding new features might improve the product, it could also divert resources from essential tasks. Clear goals help in making informed decisions about what to include, ensuring that efforts contribute directly to the project's success without compromising team cohesion.
 
 Goals serve as a North Star, guiding the project journey.
 
-## Additional Benefits of Clear Goals
+### Increasing $\text{p}$
 
 Goals act as benchmarks to measure project success. By defining clear objectives, you enable "validated learning," a concept from the famous book *Lean Startup*. Without goals, you can neither fail nor succeed meaningfully. Clear goals help you identify successes and failures, allowing you to increase the probability of success ($\text{p}$) with each new project.
 
