--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -1,10 +1,10 @@
 ---
 layout: single
-title: "GEBRA: Week 1, the goal"
+title: "GEBRA: Week 1, The goal"
 date: 2024-10-01
 tags: GEBRA
 categories: GEBRA
-published: false
+published: true
 author: Yongjun Song
 ---
 
