second post - draft - publish

--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -10,7 +10,7 @@ author: Yongjun Song
 
 This post is 266 days behind the actual project.
 
-As a product owner and project manager for the genomic analysis and interpretation tool GEBRA, one of the first crucial steps I took was to clarify the project's goals. Setting clear goals is essential for the success of any project. In this post, I want to highlight why goals matter and how they influence project outcomes.
+As a PM for the genomic analysis and interpretation tool GEBRA, one of the first crucial steps I took was to clarify the project's goals. Setting clear goals is essential for the success of any project. In this post, I want to highlight why goals matter and how they influence project outcomes.
 
 ## Why Goals Matter 
 
@@ -46,7 +46,7 @@ and **setting goals increases both $\text{n}$ and $\text{p}$**.
 
 The number of attempts $\text{n}$ is influenced by:
 
-$\text{n} = \frac{\text{Total Budget}}{\text{Cost Per Project}}$
+$\text{n} = {\text{Total Budget}}//{\text{Cost Per Project}}$
 
 Where:
 
