second post - draft - publish

--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -10,7 +10,7 @@ author: Yongjun Song
 
 This post is 266 days behind the actual project.
 
-As a PM for the genomic analysis and interpretation tool GEBRA, one of the first crucial steps I took was to clarify the project's goals. Setting clear goals is essential for the success of any project. In this post, I want to highlight why goals matter and how they influence project outcomes.
+As a PM for the genomic analysis and interpretation tool GEBRA, one of the first crucial steps I took was to clarify the project's goals. Setting clear goals is essential for the success of any project. In this post, I want to emphasize the importance of setting clear goals.
 
 ## Why Goals Matter 
 
@@ -40,7 +40,7 @@ Simply put,
 
 and **setting goals increases both $\text{n}$ and $\text{p}$**.
 
-## How Clear Goals Enhance Success
+## How Clear Goals Enhance Probability of a Project to Succeed
 
 ### Increasing $\text{n}$
 
@@ -111,7 +111,13 @@ Our method involved establishing a persona for the product. The GEBRA team ident
 2. Performs genomic tests regularly,
 3. Needs to increase productivity.
 
-From this persona, we set goals from business, genetic/medical, and technological perspectives. I hope to share the details of these goals in the near future.
+From this persona, we set goals from business, genetic/medical, and technological perspectives. I will write more about our goals in the next post.
 
----
 
+## Conclusion
+
+In this post, we explored the importance of setting clear goals and how it can increase the probability of project success. We used mathematical models to illustrate the impact of project attempts and resource allocation on achieving success. Setting clear goals helps strengthen team cohesion, reduces unnecessary work, and provides a benchmark to measure progress and outcomes.
+
+At GEBRA, we began our goal-setting process by defining user personas, which guided us in establishing clear objectives across business, genetic/medical, and technological aspects of the project. I will share more details in the next post.
+
+*Thank you for reading. Feel free to contact me by email if you have any thoughts or questions, feel free to leave a comment. See you in the next post!*  
