second post - draft - publish

--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "GEBRA: Week 1, The goal"
+title: "GEBRA: Week 1, Setting clear goal"
 date: 2024-10-01
 tags: GEBRA
 categories: GEBRA
