second post - draft - publish

--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -14,7 +14,7 @@ As a PM for the genomic analysis and interpretation tool GEBRA, one of the first
 
 ## Why Goals Matter 
 
-Having a clear goal increases the chances of success:
+Having clear goals increases the chances of success:
 
 $\text{Probability of success with goals} >= \text{Probability of success without goals}$
 
