second post - draft - publish

--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -18,7 +18,11 @@ Having clear goals increases the chances of success:
 
 $\text{Probability of success with goals} >= \text{Probability of success without goals}$
 
-To understand the factors affecting the probability of success, let's consider an equation based on the "fast failure" method. Assume that each project attempt has the same probability of success ($\text{p}$) and that success is so definitive that you don't need a second one. The number of projects attempted is ($\text{n}$).
+By formulating an equation, we can conceptualize factors that influence the likelihood of success. The model is based on the principle of "fast failure," where the project can iterate multiple times to improve. 
+
+Assuming each project has an equal chance of success:
+- Let $\text{p}$ be the probability of success for each individual project.
+- Let $\text{n}$ be the number of project iterations.
 
 The probability of achieving success increases with each project attempt:
 
@@ -33,7 +37,9 @@ Mathematically, it can be expressed as a sum of probabilities that reduces to:
 $\text{Success} = (1 - (1-p)^n)$
 
 Here, $\text{p}$ is the probability of success for a single project, and $\text{n}$ is the number of project attempts.
-In this equation, $\text{Success}$ is affected by $\text{n}$ and $\text{p}$, and increases as those two factors increase.
+
+In this equation, $\text{Success}$ increases as those two factors increase.
+
 Simply put, 
 1. the more attempts you have, the more likely you are to achieve success.
 2. the more likely each project succeed, the more likely you are to achieve success.
