--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -85,24 +85,16 @@ Therefore, $\text{n}$ increases with:
 
 #### 1. Strengthening Team Cohesion
 
-Clear goals enable the team to understand what needs to be achieved, promoting better communication and increasing cohesion. Communication is essential, especially in a multidisciplinary team like GEBRA, which includes medical genetics experts, web developers, BI engineers, and AI engineers. Each team has different domain knowledge and perspectives, making it challenging to align on vague objectives. Defining specific goals—such as creating a product that provides:
-
-1. Precise and reliable outcomes
-2. Fast analysis
-3. High usability
-
-helped unifying the team's efforts.
+A shared understanding of goals promotes better communication, especially in cross-functional teams. For GEBRA, our project involves collaboration between medical genetics experts, web developers, BI engineers, and AI engineers. Without clear goals, each team might have a different perception of the end product. Defining goals such as "precise and reliable outcomes," "fast analysis," and "high usability" provides a concrete framework for all teams to align their efforts.
 
 #### 2. Reducing Unnecessary Work
 
-Clear goals guide the project direction, preventing team members from pursuing well-intentioned but potentially unnecessary features. While adding new features might improve the product, it could also divert resources from essential tasks. Clear goals help in making informed decisions about what to include, ensuring that efforts contribute directly to the project's success without compromising team cohesion.
-
-Goals serve as a North Star, guiding the project journey.
+During the course of a project, it's natural to want to add new features or capabilities. However, without clear goals, it becomes difficult to discern whether these additions are beneficial or simply "nice-to-haves." Goals serve as a guiding star, helping decide whether a new feature is in line with the project’s purpose. When the team understands the goals, they are less likely to introduce features that stray from the core objectives.
 
 ### Increasing $\text{p}$
 
 
-Goals act as benchmarks to measure project success. By defining clear objectives, you enable "validated learning," a concept from the famous book *Lean Startup*. Without goals, you can neither fail nor succeed meaningfully. Clear goals help you identify successes and failures, allowing you to increase the probability of success ($\text{p}$) with each new project.
+Goals act as benchmarks for determining the success or failure of a project. As Eric Ries highlights in The Lean Startup, clear goals enable "validated learning," allowing us to assess which aspects worked and which didn’t. Without defined goals, failure and success are indistinguishable. Clear goals help you identify successes and failures, allowing you to increase the probability of success ($\text{p}$) as projects continue.
 
 In short, with clear goals:
 
@@ -117,7 +109,7 @@ Our method involved establishing a persona for the product. The GEBRA team ident
 2. Performs genomic tests regularly,
 3. Needs to increase productivity.
 
-From this persona, we set goals from business, genetic/medical, and technological perspectives. I will write more about our goals in the next post.
+From this persona, we set goals from business, user experience, and technological perspectives. I will write more about our goals in the next post.
 
 
 ## Conclusion
