second post - draft - publish

--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -116,6 +116,6 @@ From this persona, we set goals from business, user experience, and technologica
 
 In this post, we explored the importance of setting clear goals and how it can increase the probability of project success. We used mathematical models to illustrate the impact of project attempts and resource allocation on achieving success. Setting clear goals helps strengthen team cohesion, reduces unnecessary work, and provides a benchmark to measure progress and outcomes.
 
-At GEBRA, we began our goal-setting process by defining user personas, which guided us in establishing clear objectives across business, genetic/medical, and technological aspects of the project. I will share more details in the next post.
+At GEBRA, we began our goal-setting process by defining user personas, which guided us in establishing clear objectives across business, user experience, and technological aspects of the project. I will share more details in the next post.
 
 *Thank you for reading. Feel free to contact me by email if you have any thoughts or questions, feel free to leave a comment. See you in the next post!*  
