second post - draft - publish

--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -75,7 +75,7 @@ Therefore, $\text{n}$ increases with:
 
 1. Greater Budget.
 2. Projects requiring fewer achievements to complete but maintaining the same probability of success.
-3. Accumulated previous achievements (e.g., references, API resources, prior work, and etc).
+3. Accumulated previous achievements (e.g., references, API resources, prior work, etc).
 4. Strong team cohesion.
 5. High individual abilities of team members.
 6. Minimization of unnecessary work.
