second post - draft - publish

--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -109,7 +109,7 @@ Our method involved establishing a persona for the product. The GEBRA team ident
 2. Performs genomic tests regularly,
 3. Needs to increase productivity.
 
-From this persona, we set goals from business, user experience, and technological perspectives. I will write more about our goals in the next post.
+From this persona, we set goals from business, user experience, and technological perspectives.
 
 
 ## Conclusion
