second post - draft - publish

--- a/_posts/2024-09-21-GEBRA-week0.md
+++ b/_posts/2024-09-21-GEBRA-week0.md
@@ -73,6 +73,4 @@ From a business perspective, it's for:
 
 In the next post, I will write how we established the **goal**.
 
-Feel free to contact me by email if you have any questions or feedback.
-
-*Thank you for reading. Stay tuned for our next update!*
+*Thank you for reading. Feel free to contact me by email if you have any thoughts or questions, feel free to leave a comment. See you in the next post!*  
