--- a/_posts/2024-09-21-GEBRA-week0.md
+++ b/_posts/2024-09-21-GEBRA-week0.md
@@ -7,7 +7,12 @@ categories: GEBRA
 published: true
 author: Yongjun Song
 ---
-This post is 270 days behind the actual project.
+{% assign past_date = '2024-01-03' | date: '%s' %}
+{% assign current_date = site.time | date: '%s' %}
+{% assign difference_in_seconds = current_date | minus: past_date %}
+{% assign days_difference = difference_in_seconds | divided_by: 86400 | floor %}
+
+This post is {{ days_difference }} days behind the actual project.
 
 Before we dive in:
 
