gebra-week1-days-change

--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -8,7 +8,12 @@ published: true
 author: Yongjun Song
 ---
 
-This post is 266 days behind the actual project.
+{% assign past_date = '2024-01-09' | date: '%s' %}
+{% assign current_date = site.time | date: '%s' %}
+{% assign difference_in_seconds = current_date | minus: past_date %}
+{% assign days_difference = difference_in_seconds | divided_by: 86400 | floor %}
+
+This post is {{ days_difference }} days behind the actual project.
 
 As a PM for the genomic analysis and interpretation tool GEBRA, one of the first crucial steps I took was to clarify the project's goals. Setting clear goals is essential for the success of any project. In this post, I want to emphasize the importance of setting clear goals.
 
