--- a/_posts/2024-10-09-GEBRA-week2.md
+++ b/_posts/2024-10-09-GEBRA-week2.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "GEBRA: Week 1, Setting clear goal"
+title: "GEBRA: Week 2, How to set goals"
 date: 2024-10-09
 tags: GEBRA
 categories: GEBRA
@@ -8,9 +8,43 @@ published: false
 author: Yongjun Song
 ---
 
-{% assign past_date = '2024-01-09' | date: '%s' %}
+{% assign past_date = '2024-01-12' | date: '%s' %}
 {% assign current_date = site.time | date: '%s' %}
 {% assign difference_in_seconds = current_date | minus: past_date %}
 {% assign days_difference = difference_in_seconds | divided_by: 86400 | floor %}
 
 This post is {{ days_difference }} days behind the actual project.
+
+In the last post, I wrote about the benefit of setting clear goals in project management.
+
+This post is about how we, GEBRA team, set goals for the project.
+
+From the beginning, this project had its own distinct characteristics.
+
+1. The product already existed
+2. 
+
+This time I want to share my experience through the concept of product market fit.
+
+## Product Market Fit
+
+Product Market Fit (PMF) is defined as the point when or the degree to which a product satisfies a market demand. Even though it is vaguely defined, product market fit is a strong concept and a tool to deliver steps we need to take to build a successful business. Finding a product market fit is to make a product that solves problems and deliver it to the people who need it. It is a goal of every service providers.
+
+![Product Market Fit - by Dan Olsen](assets/image/pmf_pyramid.webp)
+
+The pyramid illustrates components of PMF. These components correspond to the steps one needs to take to find product market fit.
+
+1. Define the market
+2. Understand market's pain point
+3. Align value proposition
+4. Develop your product accordingly
+5. and continue
+
+
+
+In this perspective, GEBRA project has already went through some .
+
+## Redefining the market
+
+We couldn't aim for the same client with WES and WGS that the company has provided for years as GEBRA, by its nature, is different from the genomic tests. 
+
