--- a/_posts/2024-10-09-GEBRA-week2.md
+++ b/_posts/2024-10-09-GEBRA-week2.md
@@ -4,7 +4,7 @@ title: "GEBRA: Week 2, How to set goals"
 date: 2024-10-09
 tags: GEBRA
 categories: GEBRA
-published: false
+published: true
 author: Yongjun Song
 ---
 
@@ -17,34 +17,20 @@ This post is {{ days_difference }} days behind the actual project.
 
 In the last post, I wrote about the benefit of setting clear goals in project management.
 
-This post is about how we, GEBRA team, set goals for the project.
+This post is about how we set the goals.
 
-From the beginning, this project had its own distinct characteristics.
+The purpose of the project is to launch the product, and to make revenue of it.
 
-1. The product already existed
-2. 
+To launch the product and go public, we needed to make some adjustments.
 
-This time I want to share my experience through the concept of product market fit.
+1. Integrate all features that were diversified to other internal webpages
+2. Remove dependencies from internal features of the software 
+3. Add features that are required
 
-## Product Market Fit
+-Article removed from here-
+After writing this article, I realized that this contained some details that I can't disclose.
 
-Product Market Fit (PMF) is defined as the point when or the degree to which a product satisfies a market demand. Even though it is vaguely defined, product market fit is a strong concept and a tool to deliver steps we need to take to build a successful business. Finding a product market fit is to make a product that solves problems and deliver it to the people who need it. It is a goal of every service providers.
+The next article would be about the market of GEBRA
 
-![Product Market Fit - by Dan Olsen](assets/image/pmf_pyramid.webp)
-
-The pyramid illustrates components of PMF. These components correspond to the steps one needs to take to find product market fit.
-
-1. Define the market
-2. Understand market's pain point
-3. Align value proposition
-4. Develop your product accordingly
-5. and continue
-
-
-
-In this perspective, GEBRA project has already went through some .
-
-## Redefining the market
-
-We couldn't aim for the same client with WES and WGS that the company has provided for years as GEBRA, by its nature, is different from the genomic tests. 
+*Thank you for reading. Feel free to contact me by email if you have any thoughts or questions, feel free to leave a comment.*  
 
