--- a/_posts/2024-09-21-GEBRA-week0.md
+++ b/_posts/2024-09-21-GEBRA-week0.md
@@ -25,7 +25,7 @@ In this post, I will discuss:
 1. Why we needed the reason for the project
 2. What the reason was   
 
-## Reason
+## Reasons
 Having clear reasons (a drive, backup data, a feasibility test, or whatever you want to call it) and communicating them to the team is an essential part of project planning. Clear and unquestionable reasons bring resilience to the team. A year is not short; a lot can happen along the journey. The team might encounter trouble, disagreements, exhaustion, or even pessimism. Having strong reasons will help our team overcome these challenges.
 
 ### For Our Vision:
