--- a/_posts/2024-09-21-GEBRA-week0.md
+++ b/_posts/2024-09-21-GEBRA-week0.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "GEBRA: Week 0, Why doing this?"
+title: "GEBRA: Week 0, Why are we doing this?"
 date: 2024-09-21
 tags: GEBRA
 categories: GEBRA
