--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -31,21 +31,24 @@ Assuming each project has an equal chance of success:
 
 The probability of achieving success increases with each project attempt:
 
-$\text{Success} = \text{Probability of Single Success} + \text{Probability of Success After Failure}$
+${P_success} = \text{Probability of Single Success} + \text{Probability of Success After Failure}$
 
 Which is:
 
-$\text{Success} = {p_1} + {p_2} + \cdots + {p_{n-1}} + {p_n} = p + p(1-p) + \cdots + p(1-p)^{n-2} + p(1-p)^{n-1}$
+${P_success} = {p_1} + {p_2} + \cdots + {p_{n-1}} + {p_n} = p + p(1-p) + \cdots + p(1-p)^{n-2} + p(1-p)^{n-1}$
 
 Mathematically, it can be expressed as a sum of probabilities that reduces to:
 
-$\text{Success} = (1 - (1-p)^n)$
+${P_success} = (1 - (1-p)^n)$
 
 Here, $\text{p}$ is the probability of success for a single project, and $\text{n}$ is the number of project attempts.
 
-In this equation, $\text{Success}$ increases as those two factors increase.
+In this equation, ${P_success}$ increases as those two factors increase.
 
 Simply put, 
+
+${P_succes} ∝ \text{n , p}
+
 1. the more attempts you have, the more likely you are to achieve success.
 2. the more likely each project succeed, the more likely you are to achieve success.
 
