--- a/_posts/2024-10-01-GEBRA-week1.md
+++ b/_posts/2024-10-01-GEBRA-week1.md
@@ -47,7 +47,7 @@ In this equation, ${P_success}$ increases as those two factors increase.
 
 Simply put, 
 
-${P_succes} ∝ \text{n , p}
+${P_succes} ∝ \text{n , p}$
 
 1. the more attempts you have, the more likely you are to achieve success.
 2. the more likely each project succeed, the more likely you are to achieve success.
