--- a/_posts/2024-10-09-GEBRA-week2.md
+++ b/_posts/2024-10-09-GEBRA-week2.md
@@ -29,7 +29,7 @@ To launch the product and go public, we needed to make some adjustments.
 
 -Article removed from here-
 
-After writing this article, I realized that this contained some details that I can't disclose.
+The article contained information that I can't disclose.
 
 The next article would be about the market of GEBRA
 
