--- a/_posts/2024-11-17-GEBRA-week3.md
+++ b/_posts/2024-11-17-GEBRA-week3.md
@@ -4,7 +4,7 @@ title: "GEBRA: Week 3, Product Market Fit for genomic diagnosis software"
 date: 2024-11-21
 tags: GEBRA
 categories: GEBRA
-published: false
+published: true
 author: Yongjun Song
 ---
 
