--- a/_posts/2024-11-17-GEBRA-week3.md
+++ b/_posts/2024-11-17-GEBRA-week3.md
@@ -19,7 +19,7 @@ Let's talk about Product Market Fit  today.
 
 Product-Market Fit (PMF) is the point at which a product effectively satisfies a strong market demand. Although it can be defined in various ways, PMF represents a crucial concept and framework for building a successful business. Achieving PMF means creating a product that solves genuine problems and delivering it to the people who need it. It’s a key milestone for all service providers.
 
-![Product Market Fit - by Dan Olsen](assets/image/pmf_pyramid.webp)
+![Product Market Fit - by Dan Olsen](https://github.com/thedrakesng/thedrakesng.github.io/assets/image/pmf_pyramid.webp)
 
 The pyramid above illustrates the components of PMF, each corresponding to a step in the journey toward finding the right fit:
 
@@ -38,7 +38,7 @@ WWhen it comes to variant interpretation software, we cannot simply target the s
 
 To understand this market, consider the following diagram:
 
-![Market definition from NetMBA.com](assets/image/marketdefinition_NetMBA.com.gif)
+![Market definition from NetMBA.com](https://github.com/thedrakesng/thedrakesng.github.io/assets/image/marketdefinition_NetMBA.com.gif)
 
 Potential Market:
 
